# hyprconfig

./: main.py  pyproject.toml
pages/: page_router.py  settings.py  splash_page.py
templates/: hyprland_conf.py
